# eclipse

./: CMakeLists.txt  README.md
examples/: basic_usage.cpp
include/eclipse/: eclipse.hpp  memory.hpp  module.hpp  pattern.hpp  types.hpp
src/: memory.cpp  module.cpp  pattern.cpp
